# SecurityChatbot

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_KR.md  README.md  TODO.md  pyproject.toml  test_connection.py
docs/: architecture.md  deployment.md
src/security_chatbot/: config.py  main.py
src/security_chatbot/chat/: session.py  ui_components.py
src/security_chatbot/rag/: document_manager.py  query_handler.py  store_manager.py
src/security_chatbot/utils/: api_client.py  error_handler.py
tests/: test_api_client.py  test_config.py  test_document_manager.py  test_integration.py  test_query_handler.py  test_store_manager.py
